# Processamento_de_Imagens_E01_Grupo2

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/core/: settings.py
src/modules/processamento/: routes.py  schemas.py  service.py  utils.py
src/modules/relatorios/: routes.py
src/processamento/: routes.py
src/relatorios/: routes.py
