[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "streamlit>=1.51.0",
    "ultralytics>=8.3.227",
    "uvicorn>=0.37.0",
]
